k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easylab
  labels:
    app: easylab
    component: namespace
